// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders Pagination with customized props correctly 1`] = `
<div>
  <ul
    class="zw-pagination"
  >
    <li
      class="zw-pagination-addon-before"
    >
      addonBefore
    </li>
    <li
      class="zw-pagination-item zw-pagination-prev zw-pagination-item--disabled"
      title="上一页"
    >
      <i
        class="zw-icon zw-icon--arrow-left zw-icon--default zw-icon--md"
        theme="default"
        type="arrow-left"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#arrow-left"
          />
        </svg>
      </i>
    </li>
    <li
      class="zw-pagination-item zw-pagination-item--active"
      title="1"
    >
      1
    </li>
    <li
      class="zw-pagination-item"
      title="2"
    >
      2
    </li>
    <li
      class="zw-pagination-item"
      title="3"
    >
      3
    </li>
    <li
      class="zw-pagination-item"
      title="4"
    >
      4
    </li>
    <li
      class="zw-pagination-item"
      title="5"
    >
      5
    </li>
    <li
      class="zw-pagination-item zw-pagination-item--ellipsis"
      title="向后 5 页"
    />
    <li
      class="zw-pagination-item"
      title="最后一页"
    >
      10
    </li>
    <li
      class="zw-pagination-item zw-pagination-next"
      title="下一页"
    >
      <i
        class="zw-icon zw-icon--arrow-right zw-icon--default zw-icon--md"
        theme="default"
        type="arrow-right"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#arrow-right"
          />
        </svg>
      </i>
    </li>
    <li
      class="zw-pagination-addon-after"
    >
      addonAfter
    </li>
  </ul>
</div>
`;

exports[`Pagination renders Pagination with jumper correctly 1`] = `
<div>
  <ul
    class="zw-pagination"
  >
    <li
      class="zw-pagination-item zw-pagination-prev zw-pagination-item--disabled"
      title="上一页"
    >
      <i
        class="zw-icon zw-icon--arrow-left zw-icon--default zw-icon--md"
        theme="default"
        type="arrow-left"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#arrow-left"
          />
        </svg>
      </i>
    </li>
    <li
      class="zw-pagination-item zw-pagination-item--active"
      title="1"
    >
      1
    </li>
    <li
      class="zw-pagination-item"
      title="2"
    >
      2
    </li>
    <li
      class="zw-pagination-item"
      title="3"
    >
      3
    </li>
    <li
      class="zw-pagination-item"
      title="4"
    >
      4
    </li>
    <li
      class="zw-pagination-item"
      title="5"
    >
      5
    </li>
    <li
      class="zw-pagination-item zw-pagination-item--ellipsis"
      title="向后 5 页"
    />
    <li
      class="zw-pagination-item"
      title="最后一页"
    >
      10
    </li>
    <li
      class="zw-pagination-item zw-pagination-next"
      title="下一页"
    >
      <i
        class="zw-icon zw-icon--arrow-right zw-icon--default zw-icon--md"
        theme="default"
        type="arrow-right"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#arrow-right"
          />
        </svg>
      </i>
    </li>
  </ul>
</div>
`;

exports[`Pagination renders Pagination with total info correctly 1`] = `
<div>
  <ul
    class="zw-pagination"
  >
    <li
      class="zw-pagination-total"
    >
      共有 100 条记录 第 1 / 10 页
    </li>
    <li
      class="zw-pagination-item zw-pagination-prev zw-pagination-item--disabled"
      title="上一页"
    >
      <i
        class="zw-icon zw-icon--arrow-left zw-icon--default zw-icon--md"
        theme="default"
        type="arrow-left"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#arrow-left"
          />
        </svg>
      </i>
    </li>
    <li
      class="zw-pagination-item zw-pagination-item--active"
      title="1"
    >
      1
    </li>
    <li
      class="zw-pagination-item"
      title="2"
    >
      2
    </li>
    <li
      class="zw-pagination-item"
      title="3"
    >
      3
    </li>
    <li
      class="zw-pagination-item"
      title="4"
    >
      4
    </li>
    <li
      class="zw-pagination-item"
      title="5"
    >
      5
    </li>
    <li
      class="zw-pagination-item zw-pagination-item--ellipsis"
      title="向后 5 页"
    />
    <li
      class="zw-pagination-item"
      title="最后一页"
    >
      10
    </li>
    <li
      class="zw-pagination-item zw-pagination-next"
      title="下一页"
    >
      <i
        class="zw-icon zw-icon--arrow-right zw-icon--default zw-icon--md"
        theme="default"
        type="arrow-right"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#arrow-right"
          />
        </svg>
      </i>
    </li>
  </ul>
</div>
`;

exports[`Pagination renders normal Pagination correctly 1`] = `
<div>
  <ul
    class="zw-pagination"
  >
    <li
      class="zw-pagination-item zw-pagination-prev zw-pagination-item--disabled"
      title="上一页"
    >
      <i
        class="zw-icon zw-icon--arrow-left zw-icon--default zw-icon--md"
        theme="default"
        type="arrow-left"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#arrow-left"
          />
        </svg>
      </i>
    </li>
    <li
      class="zw-pagination-item zw-pagination-item--active"
      title="1"
    >
      1
    </li>
    <li
      class="zw-pagination-item"
      title="2"
    >
      2
    </li>
    <li
      class="zw-pagination-item"
      title="3"
    >
      3
    </li>
    <li
      class="zw-pagination-item"
      title="4"
    >
      4
    </li>
    <li
      class="zw-pagination-item"
      title="5"
    >
      5
    </li>
    <li
      class="zw-pagination-item zw-pagination-item--ellipsis"
      title="向后 5 页"
    />
    <li
      class="zw-pagination-item"
      title="最后一页"
    >
      10
    </li>
    <li
      class="zw-pagination-item zw-pagination-next"
      title="下一页"
    >
      <i
        class="zw-icon zw-icon--arrow-right zw-icon--default zw-icon--md"
        theme="default"
        type="arrow-right"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
        >
          <use
            href="#arrow-right"
          />
        </svg>
      </i>
    </li>
  </ul>
</div>
`;
